code: replaced String.format with str.formatted